--- a/src/app/features/datatable/datatable.component.html
+++ b/src/app/features/datatable/datatable.component.html
@@ -28,7 +28,7 @@
                             style="max-width: 100px; max-height: 100px;" />
                     </div>
                     <div *ngIf="tableColumn.type === 'action'">
-                        <button *ngIf="element.status !== 'claimed'" mat-raised-button
+                        <button *ngIf="element.status !== 'claimed'" mat-raised-button (click)="unClaimItem(element)"
                             [color]="getButtonColor(element.status)">
                             Unclaim
                         </button>
