--- a/src/app/features/view-unclaim/view-unclaim.component.html
+++ b/src/app/features/view-unclaim/view-unclaim.component.html
@@ -5,11 +5,6 @@
         <h1 class="font-semibold max-w-3xs mr-6 text-2xl">View / Unclaim Item</h1>
 
       </div>
-
-      <div *ngIf="showNoResults" class="error-message">
-        <p>No results found for the entered email address.</p>
-      </div>
-
     </div>
     <div class="flex-grow px-5">
       <mat-card class="w-full">
@@ -34,11 +29,11 @@
                 </button>
               </mat-form-field>
               <div class="gap-3 mr-3 items-end h-10 left-0 buttons">
-                <button mat-button (click)="clear()">
+                <button mat-button (click)="SearchAndClear('clear')">
                   <span style="color: #f44336;">Clear</span>
                 </button>
                 <button mat-flat-button color="primary"
-                  class="bg-transparent text-teal-500 font-semibold py-1 px-4 border border-transparent hover:border-teal-500 rounded">
+                (click)="SearchAndClear('search')">
                   Search
                 </button>
               </div>
@@ -49,7 +44,7 @@
     </div>
   </div>
   <div class="flex-grow mt-5 mx-3">
-    <app-datatable [tableData]="searchResults" [tableColumns]="displaycoloums" [isPageable]="true"
+    <app-datatable (unClaim)="confirmUnclaim($event)" [tableData]="searchResults" [tableColumns]="displaycoloums" [isPageable]="true"
       [paginationSizes]="[5, 10, 15, 20]" [defaultPageSize]="15"></app-datatable>
   </div>
 
